--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "stats-gl": "^0.3.0",
     "stats-js": "^1.0.1",
     "three": "^0.154.0",
     "web-vitals": "^2.1.4"
