--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "mikktspace": "^1.1.1",
     "postprocessing": "^6.32.2",
     "rc-slider": "^10.2.1",
     "react": "^18.2.0",
