single mesh titled cubemap

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 /node_modules
 /.pnp
 .pnp.js
-/src/lib/core/textures/cubetexture.js
+./src/lib/core/textures/cubetexture.js
+./public/planet
 # testing
 /coverage
 
