--- a/package/package.json
+++ b/package/package.json
@@ -1,18 +1,26 @@
 {
   "name": "planettech",
-  "version": "0.0.5-alpha.0",
+  "version": "0.0.5-alpha.1.1",
   "description": "Asset toolkit for creating real 3D planets that can be transtion from ground to sky.",
-  "main": "index.js",
+  "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --config webpack.config.cjs"
   },
   "keywords": [
-    "Planet"
+    "Planet",
+    "Threejs"
   ],
   "author": "Miguel Myers",
   "license": "ISC",
   "dependencies": {
-    "three": "^0.162.0"
+    "postprocessing": "^6.34.3",
+    "three": "^0.162.0",
+    "web-worker": "^1.3.0"
+  },
+  "devDependencies": {
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   }
 }
