--- a/package/package.json
+++ b/package/package.json
@@ -2,11 +2,10 @@
   "name": "planettech",
   "version": "0.0.5-alpha.1.1",
   "description": "Asset toolkit for creating real 3D planets that can be transtion from ground to sky.",
-  "main": "dist/index.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.config.cjs"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "Planet",
@@ -16,11 +15,6 @@
   "license": "ISC",
   "dependencies": {
     "postprocessing": "^6.34.3",
-    "three": "^0.162.0",
-    "web-worker": "^1.3.0"
-  },
-  "devDependencies": {
-    "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4"
+    "three": "^0.162.0"
   }
 }
