--- a/package.json
+++ b/package.json
@@ -1,50 +1,20 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "mikktspace": "^1.1.1",
-    "postprocessing": "^6.34.3",
-    "rc-slider": "^10.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "stats-gl": "^0.3.0",
-    "stats-js": "^1.0.1",
-    "three": "^0.162.0",
-    "web-vitals": "^2.1.4"
-  },
+  "name": "planettech",
+  "version": "0.0.5-alpha.1.2",
+  "description": "Asset toolkit for creating real 3D planets that can be transtion from ground to sky.",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "WATCHPACK_POLLING=true PORT=3001 react-scripts start",
-    "build": "react-scripts build",
-    "test": "vitest  --environment jsdom ./test",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@babel/preset-env": "^7.23.2",
-    "babel-jest": "^29.7.0",
-    "jest": "^27.5.1",
-    "vitest": "^0.34.6"
+  "keywords": [
+    "Planet",
+    "Threejs"
+  ],
+  "author": "Miguel Myers",
+  "license": "ISC",
+  "dependencies": {
+    "postprocessing": "^6.34.3",
+    "three": "^0.162.0"
   }
 }
