--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "planettech",
-  "version": "0.0.5-alpha.1.2",
-  "description": "Asset toolkit for creating real 3D planets that can be transtion from ground to sky.",
+  "version": "0.0.8-alpha.0.1.1",
+  "description": "Asset toolkit for creating real 3D planets that can be transtioned from ground to sky.",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/miguelmyers8/PlanetTechJS"
+  },
+  "bugs": {
+    "url": "https://github.com/miguelmyers8/PlanetTechJS/issues"
   },
   "keywords": [
     "Planet",
@@ -16,5 +23,6 @@
   "dependencies": {
     "postprocessing": "^6.34.3",
     "three": "^0.162.0"
-  }
+  },
+  "homepage": "https://github.com/miguelmyers8/PlanetTechJS"
 }
