--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://miguelmyers8.github.io/PlanetTechJS/examples/",
   "name": "planettech",
   "version": "0.0.8-alpha.0.1.1",
   "description": "Toolkit for creating real 3D planets that can be transtioned from ground to sky.",
@@ -23,6 +24,5 @@
   "dependencies": {
     "postprocessing": "^6.34.3",
     "three": "^0.162.0"
-  },
-  "homepage": "https://github.com/miguelmyers8/PlanetTechJS/examples/"
+  }
 }
