--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/miguelmyers8/PlanetTechJS"
+    "url": "https://miguelmyers8.github.io/PlanetTechJS/examples/"
   },
   "bugs": {
     "url": "https://github.com/miguelmyers8/PlanetTechJS/issues"
