--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://github.com/InterstellarJS/PlanetTech/examples/",
-  "name": "planettech",
+  "name": "@interstellar-js-core/planettech",
   "version": "0.0.8-alpha.0.1.7",
   "description": "Toolkit for creating real 3D planets that can be transtioned from ground to sky.",
   "main": "index.js",
