--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest"
   },
   "repository": {
     "type": "git",
@@ -24,5 +24,8 @@
   "dependencies": {
     "postprocessing": "^6.34.3",
     "three": "^0.162.0"
+  },
+  "devDependencies": {
+    "vitest": "^1.5.3"
   }
 }
