--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "main": "index.js",
   "type": "module",
   "sidEffects": false,
-
   "scripts": {
     "test": "vitest"
   },
@@ -27,6 +26,7 @@
     "three": "0.169.0"
   },
   "devDependencies": {
-    "vitest": "^1.5.3"
+    "jsdom": "^25.0.1",
+    "vitest": "^1.6.0"
   }
 }
